--- a/src/app/articles/article-details/article-details.component.css
+++ b/src/app/articles/article-details/article-details.component.css
@@ -49,6 +49,11 @@
 
 #tags {
     margin-top: 20px;
-    margin-bottom   : 20px;
+    margin-bottom: 20px;
     width: 35%;
+}
+
+#actionButtonsDiv {
+    width: 35%;
+    margin: 20px 0px 20px 0px;
 }
