--- a/src/app/articles/article-details/article-details.component.html
+++ b/src/app/articles/article-details/article-details.component.html
@@ -37,8 +37,10 @@
         </div>
         
         <div id="titleDiv" *ngIf="!isEditMode">{{article?.title}}</div>
-        <div id="titleDiv" *ngIf="isEditMode">
-            <input pInputText [(ngModel)]="editedArticle.title" class="w-full"/>
+        <div id="titleDiv2" *ngIf="isEditMode">
+            <input pInputText [(ngModel)]="editedArticle.title" 
+            [style]="{'width': '960px'}" 
+            class="w-full"/>
         </div>
 
         <div id="tags" *ngIf="!isEditMode">
@@ -56,18 +58,10 @@
         </div>
 
         <div id="contentDiv" *ngIf="!isEditMode" [innerHTML]="article?.content"></div>
-        <div id="contentDiv" *ngIf="isEditMode">
-            <p-editor [(ngModel)]="editedArticle.content" [style]="{ height: '320px' }">
-                <ng-template pTemplate="header">
-                    <span class="ql-formats">
-                        <button type="button" class="ql-bold" aria-label="Bold"></button>
-                        <button type="button" class="ql-italic" aria-label="Italic"></button>
-                        <button type="button" class="ql-underline" aria-label="Underline"></button>
-                    </span>
-                </ng-template>
-            </p-editor>
+        <div id="contentDiv" *ngIf="isEditMode">    
+            <p-editor id="editor" placeholder="Write your content here!" [(ngModel)]="editedArticle.content" [style]="{ height: 'auto', width: '960px' }" />
         </div>
-        
+
     </div>
     <app-footer class="footer" id="footer"></app-footer>
 </div>
