Changed a method name.

--- a/src/app/articles/article-details/article-details.component.html
+++ b/src/app/articles/article-details/article-details.component.html
@@ -24,7 +24,7 @@
                 label="Update" 
                 severity="success"
                 [style]="{'height': '35px', 'width': 'auto', 'margin': '5px 5px 5px 5px'}"
-                (onClick)="saveArticle()"
+                (onClick)="updateArticle()"
                 />
             <p-button
                 *ngIf="isEditMode"
