Added a background image.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<router-outlet></router-outlet>
-<p-toast></p-toast>
+<div [style.background-image]="'url(/assets/graphics/white-simple-textured-design-background.jpg)'">
+    <router-outlet></router-outlet>
+    <p-toast></p-toast>
+</div>
