--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 @import "../node_modules/quill/dist/quill.snow.css";
 @import "primeicons/primeicons.css";
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
-@import 'highlight.js/styles/dark.css';
+/* @import 'highlight.js/styles/dark.css'; */
 
 
 @font-face {
