Deleted the twitter link.

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,6 +2,6 @@
 
     <button [routerLink]="['/search-articles']" class="btn" id="customBtn">Search</button>
     <button [routerLink]="['/articles']" class="btn" id="customBtn">Articles</button>
-    <button [routerLink]="['/about']" class="btn" id="customBtn">About</button>
+    <!-- <button [routerLink]="['/about']" class="btn" id="customBtn">About</button> -->
 
 </div>
