--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <div>
 
-    <button [routerLink]="['/search-articles']" class="btn" id="customBtn">Search</button>
-    <button [routerLink]="['/articles']" class="btn" id="customBtn">Articles</button>
-    <!-- <button [routerLink]="['/about']" class="btn" id="customBtn">About</button> -->
+    <button id="navigationButton" [routerLink]="['/search-articles']" class="btn">Search</button>
+    <button id="navigationButton" [routerLink]="['/articles']" class="btn">Articles</button>
+    <button id="aboutButton" [routerLink]="['/about']" class="btn">About</button>
 
 </div>
