--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,5 @@
 <div>
-
-    <button id="navigationButton" [routerLink]="['/search-articles']" class="btn">Search</button>
-    <button id="navigationButton" [routerLink]="['/articles']" class="btn">Articles</button>
-    <button id="aboutButton" [routerLink]="['/about']" class="btn">About</button>
-
+    <button id="navigationButton" [routerLink]="['/search-articles']" class="btn">search</button>
+    <button id="navigationButton" [routerLink]="['/articles']" class="btn">articles</button>
+    <button id="aboutButton" [routerLink]="['/about']" class="btn">about</button>
 </div>
