Added a modification date to dtos.

--- a/src/app/articles/all-articles-item/all-articles-item.component.html
+++ b/src/app/articles/all-articles-item/all-articles-item.component.html
@@ -12,6 +12,8 @@
             </div>
 
             <a id="created">Created: {{ getFormattedDate() }}</a>
+            <a id="created">Updated: {{ getFormattedMofificationDate() }}</a>
+
         </div>
     </p-card>
 </div>
