--- a/src/app/search-articles/search-result-item/search-result-item.component.html
+++ b/src/app/search-articles/search-result-item/search-result-item.component.html
@@ -12,6 +12,7 @@
             </div>
 
             <a>Created: {{article?.creationDate}}</a>
+            <a>Updated: {{article?.modificationDate}}</a>
         </div>
     </p-card>
 </div>
