Changed naming of a link-button id on the footer.

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div>
 
-    <a id="linkedIn-button" href="https://linkedin.com/in/krzysztof-plociennik" target="_blank" rel="noopener noreferrer" class="p-button pi pi-linkedin"></a>
-    <a id="linkedIn-button" href="https://github.com/krzysztofplociennik" target="_blank" rel="noopener noreferrer" class="p-button pi pi-github"></a>
+    <a id="links-button" href="https://linkedin.com/in/krzysztof-plociennik" target="_blank" rel="noopener noreferrer" class="p-button pi pi-linkedin"></a>
+    <a id="links-button" href="https://github.com/krzysztofplociennik" target="_blank" rel="noopener noreferrer" class="p-button pi pi-github"></a>
 
 </div>
