Fixed styling on the footer's buttons.

--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -9,7 +9,7 @@ a {
     margin: 20px 11px 20px 11px;
 }
 
-#linkedIn-button {
+#links-button {
     border-radius: 80%;
     border: 0cap;
     background-color: rgb(141, 141, 141);
