--- a/src/app/search-articles/search-result-item/search-result-item.component.css
+++ b/src/app/search-articles/search-result-item/search-result-item.component.css
@@ -7,3 +7,20 @@ p-chip {
     margin-left: 2px;
     margin-right: 2px;
 }
+
+a {
+    font-size: 12px;
+    margin-bottom: 2px;
+    margin-top: 2px;
+}
+
+div {
+    font-size: 12px;
+}
+
+::ng-deep .p-card .p-card-title {
+    font-size: 15px;
+    margin-bottom: -10px;
+    margin-top: -10px;
+
+}
