--- a/src/app/search-articles/search-result-item/search-result-item.component.html
+++ b/src/app/search-articles/search-result-item/search-result-item.component.html
@@ -7,7 +7,7 @@
             <div id="tags">
                 Tags: 
                 <div *ngFor="let tag of article?.tags" style="display: inline-block; margin-left: 5px;">
-                    <p-chip [style]="{'height': '30px','width': 'auto'}">{{ tag }}</p-chip>
+                    <p-chip [style]="{'height': '15px','width': 'auto', 'font-size': '10px'}">{{ tag }}</p-chip>
                 </div>
             </div>
 
