Changed date format on the search articles view.

--- a/src/app/search-articles/search-result-item/search-result-item.component.html
+++ b/src/app/search-articles/search-result-item/search-result-item.component.html
@@ -11,8 +11,8 @@
                 </div>
             </div>
 
-            <a>Created: {{article?.creationDate}}</a>
-            <a>Updated: {{article?.modificationDate}}</a>
+            <a>Created: {{ getFormattedDate() }}</a>
+            <a>Updated: {{ getFormattedMofificationDate() }}</a>
         </div>
     </p-card>
 </div>
