--- a/src/app/articles/all-articles-item/all-articles-item.component.css
+++ b/src/app/articles/all-articles-item/all-articles-item.component.css
@@ -3,14 +3,6 @@
     flex-direction: column;
 }
 
-#type {
-    margin-bottom: 10px;    
-}
-
-#created {
-    margin-top: 10px;
-}
-
 #tags {
     flex-wrap: wrap;
     display: flex;
@@ -21,4 +13,22 @@
 p-chip {
     margin-left: 2px;
     margin-right: 2px;
+}
+
+::ng-deep .p-card .p-card-title {
+    font-size: 15px;
+    margin-bottom: -10px;
+    margin-top: -10px;
+}
+
+a {
+    font-size: 12px;
+    margin-bottom: 2px;
+    margin-top: 2px;
+}
+
+div {
+    font-size: 12px;
+    margin-bottom: 1px;
+    margin-top: 1px;
 }
