--- a/src/app/articles/all-articles-item/all-articles-item.component.html
+++ b/src/app/articles/all-articles-item/all-articles-item.component.html
@@ -7,12 +7,12 @@
             <div id="tags">
                 Tags: 
                 <div *ngFor="let tag of article?.tags" style="display: inline-block; margin-left: 5px;">
-                    <p-chip [style]="{'height': '30px','width': 'auto'}">{{ tag }}</p-chip>
+                    <p-chip [style]="{'height': '15px','width': 'auto', 'font-size': '10px'}">{{ tag }}</p-chip>
                 </div>
             </div>
 
             <a id="created">Created: {{ getFormattedDate() }}</a>
-            <a id="created">Updated: {{ getFormattedMofificationDate() }}</a>
+            <a id="updated">Updated: {{ getFormattedMofificationDate() }}</a>
 
         </div>
     </p-card>
