Added a very simple button switch for the light and dark modes.

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,4 +2,5 @@
     <button id="navigationButton" [routerLink]="['/search-articles']" class="btn">search</button>
     <button id="navigationButton" [routerLink]="['/articles']" class="btn">articles</button>
     <button id="aboutButton" [routerLink]="['/about']" class="btn">about</button>
+    <button (click)="toggleTheme()">Toggle Dark/Light Mode</button>
 </div>
