--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,6 @@
 <div>
+
+    <button id="navigationButton" [routerLink]="['/login']" class="btn">login</button>
     <button id="navigationButton" [routerLink]="['/search-articles']" class="btn">search</button>
     <button id="navigationButton" [routerLink]="['/articles']" class="btn">articles</button>
 
