--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -15,6 +15,10 @@
             <button type="submit" [disabled]="loginForm.invalid">Login</button>
         </form>
 
+        <div *ngIf="this.errorMessage">
+            <span> Login failed </span>
+        </div>
+
     </div>
     <app-footer class="footer" id="footer"></app-footer>
 </div>
