--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -3,16 +3,24 @@
     <app-header class="header"></app-header>
     <div id="contentWrapper">
 
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" id="login">
             <div>
-                <label for="username">Username</label>
-                <input id="username" formControlName="username" type="text" />
+                <label id="usernameLabel" for="username">Username</label>
+                <input id="usernameInput" formControlName="username" type="text" pInputText />
+
             </div>
             <div>
-                <label for="password">Password</label>
-                <input id="password" formControlName="password" type="password" />
+                <label id="passwordLabel" for="password">Password</label>
+                <input id="passwordInput" formControlName="password" type="password" pInputText />
             </div>
-            <button type="submit" [disabled]="loginForm.invalid">Login</button>
+
+            <p-button 
+            [style]="{'height': '35px', 'width': 'auto', 'margin': '5px 5px 5px 5px'}"
+            id="loginButton" 
+            type="submit" 
+            label="Login" 
+            [disabled]="loginForm.invalid"/>
+
         </form>
 
         <div *ngIf="this.errorMessage">
