--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -18,7 +18,7 @@
             [style]="{'height': '35px', 'width': 'auto', 'margin': '5px 5px 5px 5px'}"
             id="loginButton" 
             type="submit" 
-            label="Login" 
+            label="log in" 
             [disabled]="loginForm.invalid"/>
 
         </form>
