--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,55 +1,20 @@
-div {
+#headerDiv {
     background: #324a68;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    position: relative;
-}
-
-div::content:last-of-type {
-    position: absolute;
-    right: 30px;
-}
-
-div::content:first-of-type {
-    position: absolute;
-    left: 30px;
-}
-
-#navigationButton {
-    cursor: pointer;
-    border: 1px solid rgb(167, 224, 255);
-    font-size: 34px;
-    font-family: 'Raleway';
-    color: rgb(255, 255, 255);
     padding: 10px 30px;
-    margin: 10px 10px 10px 10px;
-    transition: 40ms;
-    width: 266px;
-    height: 60px;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
-    border-radius: 23px;
-    background: linear-gradient(90deg, rgb(0, 102, 204) 18%, rgb(23, 37, 60) 100%);
+    width: 100%;
+  }
+  
+  .center-buttons {
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: row-reverse;
-    --hover-borderSize: 4px;
-    --hover-width: 337px;
-    font-weight: 400;
-    --hover-borderc: #7bb6f0;
-    --hover-color: #7bb6f0;
-}
-
-#navigationButton:hover {
-    color: rgb(123, 182, 240);
-    background: rgb(0, 102, 204) none repeat scroll 0% 0% / auto padding-box border-box;
-    border-color: rgb(123, 182, 240);
-    border-width: 3px;
-    border-style: solid;
-}
-
-.theme-toggle {
+    gap: 20px;
+    flex-grow: 1;
+  }
+  
+  .theme-toggle {
     background: none;
     border: none;
     border-radius: 50%;
@@ -63,25 +28,58 @@ div::content:first-of-type {
     transition: transform 0.3s ease;
     width: 2rem;
     height: 2rem;
-}
-
-.theme-toggle i {
+    margin-right: auto;
+  }
+  
+  .theme-toggle i {
     font-size: 1.8rem;
     line-height: 1;
     position: relative;
     left: 0.0rem;
     top: 0.1rem;
-}
-
-.theme-toggle:active {
-    transform: scale(0.9);
-}
-
-.theme-toggle i {
     transition: opacity 0.3s ease;
-}
-
-.theme-toggle .fa-sun {
+  }
+  
+  .theme-toggle:active {
+    transform: scale(0.9);
+  }
+  
+  .theme-toggle .fa-sun {
     color: #ffffff;
     transition: color 0.3s ease;
-}
+  }
+  
+  #navigationButton {
+    cursor: pointer;
+    border: 1px solid rgb(167, 224, 255);
+    font-size: 34px;
+    font-family: 'Raleway';
+    color: rgb(255, 255, 255);
+    padding: 10px 30px;
+    margin: 10px;
+    transition: 40ms;
+    width: 266px;
+    height: 60px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px,
+                rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
+                rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+    border-radius: 23px;
+    background: linear-gradient(90deg, rgb(0, 102, 204) 18%, rgb(23, 37, 60) 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row-reverse;
+    font-weight: 400;
+  }
+  
+  #navigationButton:hover {
+    color: rgb(123, 182, 240);
+    background: rgb(0, 102, 204);
+    border-color: rgb(123, 182, 240);
+    border-width: 3px;
+    border-style: solid;
+  }
+  
+  #loginButton {
+    margin-left: auto;
+  }
