Adjusted center buttons slightly.

--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -12,7 +12,8 @@
     justify-content: center;
     gap: 20px;
     flex-grow: 1;
-  }
+    margin-left: 60px;
+  }s
   
   .theme-toggle {
     background: none;
