--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -12,7 +12,7 @@
     justify-content: center;
     gap: 20px;
     flex-grow: 1;
-    margin-left: 60px;
+    margin-left: 80px;
   }
   
   .theme-toggle {
@@ -82,5 +82,9 @@
   }
   
   #loginButton {
+    margin-left: auto;
+  }
+
+  #logoutButton {
     margin-left: auto;
   }
