Added a navigate action to the logout button + few minor changes.

--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -15,11 +15,12 @@
             </div>
 
             <p-button 
-            [style]="{'height': '35px', 'width': 'auto', 'margin': '5px 5px 5px 5px'}"
-            id="loginButton" 
-            type="submit" 
-            label="log in" 
-            [disabled]="loginForm.invalid"/>
+                [style]="{'height': '35px', 'width': 'auto', 'margin': '5px 5px 5px 5px'}"
+                id="loginButton" 
+                type="submit" 
+                label="log in" 
+                [disabled]="loginForm.invalid"
+            />
 
         </form>
 
