--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -17,9 +17,12 @@
 
   <div *ngIf="isLoggedIn">
     <p-button 
-      id="logoutButton" [routerLink]="['/']" icon="pi pi-sign-out" label="log out" 
-        (onClick)="logout()"  
-      [severity]="'secondary'" class="btn" [style]="{'height': '35px', 'margin': '5px 5px 5px 5px'}" />
+      id="logoutButton" 
+      icon="pi pi-sign-out" 
+      label="log out" 
+      (onClick)="logout()"  
+      [severity]="'secondary'" class="btn" [style]="{'height': '35px', 'margin': '5px 5px 5px 5px'}" 
+      />
   </div>
 
 </div>
