Added buttons visibility in regards to the login state.

--- a/src/app/articles/article-details/article-details.component.html
+++ b/src/app/articles/article-details/article-details.component.html
@@ -2,7 +2,7 @@
     <app-header class="header"></app-header>
     <div id="contentWrapper">
 
-        <div id="actionButtonsDiv">
+        <div *ngIf="isLoggedIn" id="actionButtonsDiv">
             <p-confirmDialog />
             <p-button 
                 *ngIf="!isEditMode"
