--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,4 +1,4 @@
-/* header/footer wapper */
+/* header/footer wrapper */
 #bodyDiv {
     display: flex;
     flex-direction: column;
@@ -26,4 +26,4 @@
     width: 100%;
     margin-top: 300px;
 }
-/* header/footer wapper */
+/* header/footer wrapper */
