--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,6 +9,10 @@
     <button id="navigationButton" [routerLink]="['/articles']" class="btn">articles</button>
   </div>
 
+  <div *ngIf="isLoggedIn">
+    <p-button id="loginButton" [routerLink]="['/settings']" icon="pi pi-sliders-h" label="" [severity]="'secondary'"
+      class="btn" [style]="{'height': '35px', 'margin': '5px 5px 5px 5px'}" />
+  </div>
 
   <div *ngIf="!isLoggedIn">
     <p-button id="loginButton" [routerLink]="['/login']" icon="pi pi-sign-in" label="log in" [severity]="'secondary'"
