Importing files, part 3

--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -27,3 +27,13 @@
 }
 
 /* header/footer wrapper */
+
+#exportDiv {
+    width: 50%;
+    margin-top: 3rem;
+}
+
+#importDiv {
+    width: 50%;
+    margin-top: 3rem;
+}
