--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div [style.background-image]="'url(/assets/graphics/hand-painted-watercolor-background-with-sky-clouds-shapea.jpg)'">
     <router-outlet></router-outlet>
-    <p-toast></p-toast>
+    <p-toast position="bottom-center"></p-toast>
 </div>
